Remove h1 size, it's rediculously large and unused

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -19,14 +19,22 @@ body {
 h1 {
   font-family: @font-family-sans;
   font-weight: @font-weight-bold;
-  font-size: @font-size-h1;
+  font-size: @font-size-larger;
   line-height: normal;
 }
 
 h2 {
   font-family: @font-family-serif;
   font-weight: @font-weight-bold;
-  font-size: @font-size-h2;
+  font-size: @font-size-larger;
+  line-height: normal;
+}
+
+h3 {
+  font-family: @font-family-sans;
+  font-size: @font-size-large;
+  font-weight: @font-weight-bold;
+  line-height: normal;
 }
 
 blockquote {
