--- a/src/styles/sections/script.less
+++ b/src/styles/sections/script.less
@@ -11,7 +11,7 @@ html {
 
   .bigText() {
     font-family: @font-family-serif;
-    font-size: @font-size-h2;
+    font-size: @font-size-larger;
     line-height: 1.5;
     font-weight: @font-weight-bold;
 
