--- a/src/styles/sections/welcome.less
+++ b/src/styles/sections/welcome.less
@@ -38,7 +38,7 @@
   .greeting {
     font-family: @font-family-sans;
     font-weight: @font-weight-bold;
-    font-size: @font-size-h2;
+    font-size: @font-size-larger;
   }
 
   // Semantically, this is an h1,
