--- a/src/styles/variables/typography.less
+++ b/src/styles/variables/typography.less
@@ -7,8 +7,7 @@
 @font-size-sm: 12px;
 @font-size-base: 14px;
 @font-size-large: 18px;
-@font-size-h2: 32px;
-@font-size-h1: 64px;
+@font-size-larger: 32px;
 
 @line-height-base: 22px;
 @line-height-large: 27px;
