Apply max-width to main so each section doesn't need to do it

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -1,5 +1,6 @@
 @import './variables/typography.less';
 @import './variables/color.less';
+@import './variables/sizing.less';
 
 // Typography
 
@@ -48,4 +49,8 @@ blockquote {
 a {
   color: inherit;
   text-decoration: inherit;
+}
+
+main {
+  .content-container();
 }
