Begin to style interventions
Break into a separate section, it's too hard to do html inside markdown

Create a markdown data function so ejs can render markdown manually (no shortcodes in ejs)

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -7,3 +7,4 @@
 @import './sections/script.less';
 @import './sections/people.less';
 @import './sections/report.less';
+@import './sections/interventions.less';
