Extract carousel styles to another sheet

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -2,6 +2,8 @@
 
 @import './base.less';
 
+@import './partials/carousel.less';
+
 @import './nav.less';
 @import './sections/welcome.less';
 @import './sections/script.less';
