Reduce max width so next card peeks out

--- a/src/styles/partials/carousel.less
+++ b/src/styles/partials/carousel.less
@@ -33,7 +33,7 @@ ul.carousel {
     flex: 0 0 (@grid * 35);
     min-height: @grid * 30;
     margin-right: @grid * 2;
-    max-width: calc(100vw - @grid);
+    max-width: calc(100vw - (@grid * 5));
     box-sizing: border-box;
     scroll-snap-align: center;
     padding: @grid * 2;
