Fix welcome padding
Not clear what was up

--- a/src/styles/sections/welcome.less
+++ b/src/styles/sections/welcome.less
@@ -21,6 +21,7 @@
   .below-video-content {
     width: 100%;
     .content-container();
+    padding: 0 (@grid * 2);
     align-self: center;
 
     display: flex;
