--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -10,3 +10,4 @@
 @import './sections/people.less';
 @import './sections/report.less';
 @import './sections/interventions.less';
+@import './sections/concepts.less';
