--- a/src/sections/concepts.ejs
+++ b/src/sections/concepts.ejs
@@ -4,7 +4,7 @@ position: 2
 hideInNavigation: true
 ---
 
-<div class="concepts-container" markdown="0">
+<div class="concepts-container">
   <ul class="carousel">
     <% concepts.concepts.forEach((concept, i)=> { %>
     <li class="concept" id="concept-<%= i _%>" tabindex="0">
