--- a/src/sections/interventions.ejs
+++ b/src/sections/interventions.ejs
@@ -4,7 +4,7 @@ hideInNavigation: false
 position: 6
 ---
 
-<div class="interventions-container" markdown="0">
+<div class="interventions-container">
   <ul class="carousel">
     <% interventions.interventions.forEach((intervention, i) => { %>
     <li
