--- a/src/styles/nav.less
+++ b/src/styles/nav.less
@@ -47,6 +47,8 @@
         font-weight: @font-weight-bold;
         border-bottom: 1px dashed transparent;
 
+        color: @font-color-base;
+
         &:hover {
           border-bottom-color: @font-color-base;
         }
