Style links -- different approach
Rather than doing a custom rendering from json

style plain markdown with minimal css

Use css columns to put the plain text into columns

Required installing markdown plugin to specificy containers

Commeneted out unused config json spec

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -2,6 +2,8 @@
 
 @import './base.less';
 
+@import './markdown-containers.less';
+
 @import './partials/carousel.less';
 
 @import './nav.less';
@@ -11,3 +13,4 @@
 @import './sections/report.less';
 @import './sections/interventions.less';
 @import './sections/concepts.less';
+@import './sections/learn.less';
