--- a/src/styles/variables/sizing.less
+++ b/src/styles/variables/sizing.less
@@ -6,14 +6,16 @@
 
 @mobile-width: 768px;
 
+html {
+  // Due to issue with full-bleed
+  overflow-x: hidden;
+}
+
 .content-container() {
   max-width: @content-width;
   margin: auto;
   padding: 0 @grid;
   box-sizing: border-box;
-
-  // Due to issue with full-bleed
-  overflow-x: hidden;
 }
 
 // bust out of content-container
