Only the _first_ heading should lack top margin

--- a/src/styles/sections/learn.less
+++ b/src/styles/sections/learn.less
@@ -3,13 +3,13 @@
 @import '../variables/color.less';
 
 section#learn .columns {
+  & > *:first-child h3 {
+    margin-top: 0;
+  }
+
   h3 {
     font-family: @font-family-serif;
     font-size: @font-size-base;
-
-    &:first-child {
-      margin-top: 0;
-    }
   }
 
   p {
