--- a/src/styles/sections/interventions.less
+++ b/src/styles/sections/interventions.less
@@ -21,7 +21,7 @@
     margin: 0;
     margin-top: (@grid * 2);
     font-weight: @font-weight-bold;
-    font-size: @font-size-base;
+    .font-size-base();
   }
 
   .example-colleagues-heading,
