Override browser header margins

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -20,18 +20,21 @@ h1 {
   font-family: @font-family-sans;
   font-weight: @font-weight-bold;
   .font-size-larger();
+  margin: @grid 0;
 }
 
 h2 {
   font-family: @font-family-serif;
   font-weight: @font-weight-bold;
   .font-size-larger();
+  margin: (@grid * 2) 0;
 }
 
 h3 {
   font-family: @font-family-sans;
   font-weight: @font-weight-bold;
   .font-size-large();
+  margin: @grid 0;
 }
 
 h4 {
