Change People title

--- a/src/sections/people.ejs
+++ b/src/sections/people.ejs
@@ -9,7 +9,11 @@ hideInNavigation: false
 matchResult[1] : url; }; %>
 
 <div class="section-people">
-  <h2>Grantmakers in the Arts Commissioned this…</h2>
+  <h2>
+    This report was created by Nati Linares and Caroline Woolard for Grantmakers
+    in the Arts and draws upon interviews and conversations with the following
+    people
+  </h2>
 
   <ul class="people">
     <% people.people.forEach(person => { %>
