Section was renamed -- fix stylesheet

--- a/src/styles/sections/examples.less
+++ b/src/styles/sections/examples.less
@@ -2,7 +2,7 @@
 @import '../variables/sizing.less';
 @import '../variables/color.less';
 
-section#learn .columns {
+section#examples .columns {
   & > *:first-child h3 {
     margin-top: 0;
   }
