Fix import of report.less that was reverted

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -5,12 +5,12 @@
 @import './markdown-containers.less';
 
 @import './partials/carousel.less';
+@import './partials/report.less';
 
 @import './nav.less';
 @import './sections/welcome.less';
 @import './sections/script.less';
 @import './sections/people.less';
-@import './sections/report.less';
 @import './sections/interventions.less';
 @import './sections/concepts.less';
 @import './sections/examples.less';
