Add links to script

--- a/src/sections/script.ejs
+++ b/src/sections/script.ejs
@@ -28,7 +28,10 @@ position: 2
         directly supports women and girls of color.
       </p>
 
-      <p>And less than half of 1 percent goes to Native Americans.</p>
+      <p>
+        And less than <strong>half</strong> of 1 percent goes to Native
+        Americans.
+      </p>
 
       <p>
         What would the cultural economy be like if it loved Black and Indigenous
@@ -45,29 +48,72 @@ position: 2
 
     <div>
       <p>
-        The movement for <strong>permanently affordable space</strong> in
-        Oakland, places culture at the center of the work.
+        The movement for
+        <a href="https://ebprec.org/" target="_blank" rel="noopener noreferrer"
+          ><strong>permanently affordable space</strong></a
+        >
+        in Oakland, places culture at the center of the work.
       </p>
       <p>
         The first
-        <strong>democratically managed investment fund in the country</strong>
+        <a
+          href="https://vimeo.com/226755271"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><strong
+            >democratically managed investment fund in the country</strong
+          ></a
+        >
         &mdash; making non-extractive loans to community members &mdash; says:
         “cultural workers are economy builders.”
       </p>
-      <p>Culture bearers lead the oldest native co-op in the country.</p>
       <p>
-        Artists started the oldest non-extractive Venture Capital firm in the
-        US.
+        Culture bearers lead the
+        <a
+          href="https://quallaartsandcrafts.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          >oldest native co-op in the country</a
+        >.
       </p>
       <p>
-        A co-op giving 35,000 freelancers the benefit of full-time employment
+        Artists started the
+        <a
+          href="https://www.theworkingworld.org/us/wp-content/uploads/2013/06/Americas-Maptimized.png"
+          target="_blank"
+          rel="noopener noreferrer"
+          >oldest non-extractive Venture Capital firm in the US</a
+        >.
+      </p>
+      <p>
+        <a
+          href="https://platform.coop/stories/lisa-pointner-smart-coop/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >A co-op giving 35,000 freelancers the benefit of full-time
+          employment</a
+        >
         was founded by artists. It includes employment insurance and pension.
       </p>
       <p>
-        The nationally recognized legal organization that supports Solidarity
-        Economy groups was co-founded by a cartoonist.
+        <a
+          href="https://www.theselc.org/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >The nationally recognized legal organization that supports Solidarity
+          Economy groups</a
+        >
+        was co-founded by a cartoonist.
       </p>
-      <p>Black Lives Matter was co-founded by an artist.</p>
+      <p>
+        <a
+          href="https://www.huffpost.com/entry/eric-garner-map-twitter-world_n_6301352"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Black Lives Matter</a
+        >
+        was co-founded by an artist.
+      </p>
     </div>
   </div>
 
@@ -81,8 +127,8 @@ position: 2
     <div>
       <p>Because…</p>
       <p>
-        Right now, we have a superstar system where the winners take all and the
-        rest are left with crumbs.
+        Right now, we have a superstar system where the
+        <strong>winners take all</strong> and the rest are left with crumbs.
       </p>
       <p>Just like art, housing and dignified work are human rights.</p>
       <p>Artists are the original gig workers.</p>
