--- a/src/styles/sections/script.less
+++ b/src/styles/sections/script.less
@@ -18,6 +18,15 @@ html {
     font-weight: @font-weight-bold;
   }
 
+  a {
+    font-weight: @font-weight-bold;
+    color: @accent-color-teal;
+
+    &:hover {
+      border-bottom: 1px dashed @accent-color-teal;
+    }
+  }
+
   p small {
     font-family: @font-family-serif;
     font-size: @font-size-sm;
