Add dotted underlines to hovered links
Looks kinda nice

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -49,8 +49,14 @@ blockquote {
 }
 
 a {
-  color: @accent-color-jade;
+  @link-color: @accent-color-jade;
+
+  color: @link-color;
   text-decoration: inherit;
+
+  &:hover {
+    border-bottom: 1px dashed @link-color;
+  }
 }
 
 main {
