--- a/src/styles/sections/script.less
+++ b/src/styles/sections/script.less
@@ -23,7 +23,7 @@ html {
     color: @accent-color-teal;
 
     &:hover {
-      border-bottom: 1px dashed @accent-color-teal;
+      border-bottom-color: @accent-color-teal;
     }
   }
 
