Remove emphasis that I added

--- a/src/sections/script.ejs
+++ b/src/sections/script.ejs
@@ -180,10 +180,9 @@ position: 2
           the commons, local community economic development, democratic
           socialism, just transition, dual power, liberation economy</small
         >
-        &mdash; but internationally, it is known as the
-        <strong>Social and Solidarity Economy</strong>, or Solidarity Economy
-        for short. It provides resilience against crisis and has lasting impact
-        when supported as a holistic system.
+        &mdash; but internationally, it is known as the Social and Solidarity
+        Economy, or Solidarity Economy for short. It provides resilience against
+        crisis and has lasting impact when supported as a holistic system.
       </p>
     </div>
   </div>
