--- a/src/styles/sections/interventions.less
+++ b/src/styles/sections/interventions.less
@@ -24,8 +24,7 @@
     .font-size-base();
   }
 
-  .example-colleagues-heading,
-  .legal-heading {
+  .example-colleagues-heading {
     margin: 0;
     margin-top: @grid * 2;
     font-weight: @font-weight-bold;
