--- a/src/_layouts/default.ejs
+++ b/src/_layouts/default.ejs
@@ -9,7 +9,7 @@
     <% } else { %>
     <title><%= locals.title %></title>
     <% } %>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <%- include('/fonts') %>
   </head>
   <body>
