Add success page

--- a/src/share-example.ejs
+++ b/src/share-example.ejs
@@ -4,9 +4,14 @@ layout: default
 ---
 
 <main>
-  <a href="/">Back</a>
+  <a href="/">Back to site</a>
 
-  <form method="POST" data-netlify="true" name="share-example">
+  <form
+    method="POST"
+    data-netlify="true"
+    name="share-example"
+    action="/form-success"
+  >
     <h1>Add yourself to the list of examples</h1>
     <p>
       <label for="input-organization"> What is your organization? </label>
