Add link to form
also fix some spacing issues

--- a/src/sections/interventions.ejs
+++ b/src/sections/interventions.ejs
@@ -5,6 +5,10 @@ position: 6
 ---
 
 <div class="interventions-container">
+  <a href="/share-example" class="button"
+    >Add Yourself to this List of Examples</a
+  >
+
   <ul class="carousel">
     <% interventions.interventions.forEach((intervention, i) => { %>
     <li
