--- a/src/styles/partials/carousel.less
+++ b/src/styles/partials/carousel.less
@@ -9,7 +9,7 @@ ul.carousel {
   flex-wrap: nowrap;
 
   list-style: none;
-  margin: 0;
+  margin: (@grid * 2) 0;
 
   overflow-x: scroll;
   -webkit-overflow-scrolling: touch;
