Go back to interventions section

--- a/src/form-success.ejs
+++ b/src/form-success.ejs
@@ -6,5 +6,5 @@ layout: default
 <main>
   <h1>Your submission was received</h1>
 
-  <a href="/">Back to the site</a>
+  <a href="/#interventions">Back to the site</a>
 </main>
