--- a/src/share-example.ejs
+++ b/src/share-example.ejs
@@ -4,7 +4,7 @@ layout: default
 ---
 
 <main>
-  <a href="/">Back to site</a>
+  <a href="/#interventions">Back to site</a>
 
   <form
     method="POST"
