--- a/src/_includes/report-block.ejs
+++ b/src/_includes/report-block.ejs
@@ -1,8 +1,10 @@
 <div class="section-report">
   <div class="links">
-    <a href="#">Download the Full Report</a>
-    <a href="#">Download the Action Checklist</a>
-    <a href="#">Download the Executive Summary</a>
+    <a href="#" download data-use-interstitial>Download the Full Report</a>
+    <a href="#" download data-use-interstitial>Download the Action Checklist</a>
+    <a href="#" download data-use-interstitial
+      >Download the Executive Summary</a
+    >
   </div>
   <p>
     This report is about the ways that
