--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -6,6 +6,7 @@
 
 @import './partials/carousel.less';
 @import './partials/report.less';
+@import './partials/popup.less';
 
 @import './nav.less';
 @import './sections/welcome.less';
