--- a/src/styles/variables/sizing.less
+++ b/src/styles/variables/sizing.less
@@ -15,7 +15,7 @@ html {
   max-width: @content-width;
   margin: auto;
   padding: 0 @grid;
-  margin: @grid 0;
+  margin: @grid auto;
   box-sizing: border-box;
 }
 
