Close button styles

--- a/src/styles/partials/popup.less
+++ b/src/styles/partials/popup.less
@@ -37,13 +37,13 @@
   max-height: 100%;
   box-sizing: border-box;
 
-  padding: 3rem;
+  padding: (@grid * 2);
 
   overflow-y: auto;
 }
 
 .popup-contents .close-button {
-  color: @background-color-base;
+  color: @font-color-base;
   position: absolute;
   right: 1rem;
   top: 1rem;
