--- a/src/_includes/popup.ejs
+++ b/src/_includes/popup.ejs
@@ -14,6 +14,7 @@
       name="pdf-download"
       enctype="application/x-www-form-urlencoded"
     >
+      <input type="hidden" name="pdf" />
       <p>
         <label for="input-email">Email address</label>
         <input
