Popup should start hidden

--- a/src/_includes/popup.ejs
+++ b/src/_includes/popup.ejs
@@ -1,4 +1,4 @@
-<div class="popup scrim">
+<div class="popup scrim hidden">
   <div class="popup-contents">
     <h2>Free PDF from GIA</h2>
     <a class="close-button">✕</a>
