--- a/src/styles/partials/popup.less
+++ b/src/styles/partials/popup.less
@@ -48,6 +48,9 @@
   right: 1rem;
   top: 1rem;
   cursor: pointer;
+  &:hover {
+    border: none;
+  }
 }
 
 @media only screen and (max-width: @popup_width) {
