Events form and inline field group

--- a/src/_includes/popup.ejs
+++ b/src/_includes/popup.ejs
@@ -25,14 +25,16 @@
           required
         />
       </p>
-      <p>
-        <label for="input-first">First name</label>
-        <input id="input-first" type="text" name="first-name" required />
-      </p>
-      <p>
-        <label for="input-last">Last name</label>
-        <input id="input-last" type="text" name="last-name" required />
-      </p>
+      <fieldset class="inline-field-group">
+        <p>
+          <label for="input-first">First name</label>
+          <input id="input-first" type="text" name="first-name" required />
+        </p>
+        <p>
+          <label for="input-last">Last name</label>
+          <input id="input-last" type="text" name="last-name" required />
+        </p>
+      </fieldset>
       <p>
         <label for="input-affilliation"
           >Are you affiliated with a collective, nonprofit, or school? If so,
