Link "Action Checklist" to #action

--- a/src/_includes/report-block.ejs
+++ b/src/_includes/report-block.ejs
@@ -16,6 +16,6 @@
     Black, Indigenous, People of Color, disabled, queer, trans, and working
     class creatives who are innovating models for self-determination and
     community wealth. For specific suggestions, see the full report and the
-    Action Checklist.
+    <a href="/#action">Action Checklist</a>.
   </p>
 </div>
