Examples should link to #concepts

--- a/src/sections/concepts.ejs
+++ b/src/sections/concepts.ejs
@@ -1,7 +1,7 @@
 ---
-title: Concepts
+title: Examples
 position: 3
-hideInNavigation: true
+hideInNavigation: false
 ---
 
 <div class="concepts-container">
