--- a/src/_includes/nav.ejs
+++ b/src/_includes/nav.ejs
@@ -8,7 +8,7 @@
     <% }) %>
     <li>
       <a
-        href="https://www.giarts.org/grantmakers-arts-request-proposals-consultant-1"
+        href="https://www.giarts.org/"
         rel="noopener noreferrer"
         target="_blank"
       >
