Update script links

--- a/src/sections/script.ejs
+++ b/src/sections/script.ejs
@@ -57,7 +57,7 @@ position: 2
       <p>
         The first
         <a
-          href="https://vimeo.com/226755271"
+          href="https://www.ujimaboston.com/"
           target="_blank"
           rel="noopener noreferrer"
           ><strong
@@ -79,7 +79,7 @@ position: 2
       <p>
         Artists started the
         <a
-          href="https://www.theworkingworld.org/us/wp-content/uploads/2013/06/Americas-Maptimized.png"
+          href="https://www.theworkingworld.org/us/"
           target="_blank"
           rel="noopener noreferrer"
           >oldest non-extractive Venture Capital firm in the US</a
@@ -107,7 +107,7 @@ position: 2
       </p>
       <p>
         <a
-          href="https://www.huffpost.com/entry/eric-garner-map-twitter-world_n_6301352"
+          href="https://blacklivesmatter.com/"
           target="_blank"
           rel="noopener noreferrer"
           >Black Lives Matter</a
