Share concept form

--- a/src/sections/concepts.ejs
+++ b/src/sections/concepts.ejs
@@ -23,6 +23,8 @@ hideInNavigation: false
     </li>
     <% }) %>
   </ul>
+
+  <a href="/share-concept" class="button">Add Yourself to these Examples</a>
 </div>
 
 <p>
