--- a/src/styles/base-forms.less
+++ b/src/styles/base-forms.less
@@ -6,7 +6,8 @@
 @field-width: @grid * 40;
 
 input,
-textarea {
+textarea,
+select {
   display: block;
 
   width: @field-width;
@@ -27,7 +28,8 @@ textarea {
   height: @grid * 12;
 }
 
-label {
+label,
+legend {
   display: block;
   margin-bottom: @grid;
 }
