--- a/src/styles/sections/concepts.less
+++ b/src/styles/sections/concepts.less
@@ -31,4 +31,8 @@
     font-weight: @font-weight-bold;
     font-size: inherit;
   }
+
+  a.button {
+    .buttonStyledLink(@font-color-base);
+  }
 }
