--- a/src/share-example.ejs
+++ b/src/share-example.ejs
@@ -13,24 +13,75 @@ layout: default
     action="/form-success"
   >
     <h1>Add yourself to the list of examples</h1>
+
+    <fieldset class="inline-field-group">
+      <legend>Your name (not public)</legend>
+      <input
+        id="input-first"
+        type="text"
+        name="first-name"
+        placeholder="First"
+        required
+      />
+      <input
+        id="input-last"
+        type="text"
+        name="last-name"
+        placeholder="Last"
+        required
+      />
+    </fieldset>
+
     <p>
-      <label for="input-organization"> What is your organization? </label>
+      <label for="input-contact">Your contact information (not public)</label>
+      <input id="input-contact" type="text" name="contact" required />
+    </p>
+
+    <p>
+      <label for="input-organization"
+        >Your organization’s name (public, listed on the website)</label
+      >
       <input id="input-organization" type="text" name="organization" required />
     </p>
+
     <p>
-      <label for="input-email"> What is your email address? </label>
+      <label for="input-practice">The type of intervention</label>
+      <select id="input-practice" name="practice" required>
+        <option disabled selected>Select…</option>
+        <% _.forEach(_.groupBy(interventions.interventions, 'interventionType'),
+        (group, interventionType) => { %>
+        <optgroup label="<%= interventionType %>">
+          <% _.forEach(group, (intervention) => { %>
+          <option
+            value="<%= interventionType %> - <%= intervention.practice %>"
+          >
+            <%= intervention.practice %>
+          </option>
+          <% }) %>
+        </optgroup>
+        <% }) %>
+      </select>
+    </p>
+
+    <p>
+      <label for="input-organization-link"
+        >Link to your organization or more info about this practice (public,
+        linked to the website)</label
+      >
       <input
-        id="input-email"
-        type="email"
-        name="email"
-        placeholder="me@example.coop"
+        id="input-organization-link"
+        type="text"
+        name="organization-link"
         required
       />
     </p>
+
     <p>
-      <label for="input-work"> What work are you doing? </label>
-      <textarea id="input-work" name="work" required></textarea>
+      <label for="input-comments">Other comments</label>
+      <textarea id="input-comments" name="comments"></textarea>
     </p>
+
+    <p>Thank you!</p>
 
     <p>
       <button type="submit">Submit</button>
