--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -8,6 +8,8 @@
 @import './partials/report.less';
 @import './partials/popup.less';
 
+@import './page-countdown.less';
+
 @import './nav.less';
 @import './sections/welcome.less';
 @import './sections/script.less';
