Go to home after signup

--- a/src/_includes/email-signup-form.ejs
+++ b/src/_includes/email-signup-form.ejs
@@ -3,6 +3,7 @@
   data-netlify="true"
   name="email-signup"
   enctype="application/x-www-form-urlencoded"
+  action="/"
 >
   <fieldset class="inline-field-group">
     <p>
