Limit images to full width

--- a/src/styles/variables/sizing.less
+++ b/src/styles/variables/sizing.less
@@ -17,6 +17,10 @@ html {
   padding: 0 @grid;
   margin: @grid auto;
   box-sizing: border-box;
+
+  img {
+    max-width: 100%;
+  }
 }
 
 // bust out of content-container
