Add website field to forms

--- a/src/_includes/email-signup-form.ejs
+++ b/src/_includes/email-signup-form.ejs
@@ -23,6 +23,10 @@
     <label for="input-organization">Organization </label>
     <input id="input-organization" type="text" name="organization" />
   </p>
+  <p>
+    <label for="input-url">Website</label>
+    <input id="input-url" type="url" name="url" />
+  </p>
 
   <p>
     <button type="submit">Submit</button>
