--- a/src/_includes/popup.ejs
+++ b/src/_includes/popup.ejs
@@ -42,6 +42,10 @@
         </label>
         <input id="input-affilliation" type="text" name="affilliation" />
       </p>
+      <p>
+        <label for="input-url">Website</label>
+        <input id="input-url" type="url" name="url" />
+      </p>
 
       <p>
         <button type="submit">Submit & Download</button>
