Add paradigms table and support for tables

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -73,3 +73,15 @@ p {
 a.button {
   .buttonStyledLink(@font-color-base);
 }
+
+table {
+  th {
+    text-align: left;
+  }
+
+  td,
+  th {
+    padding: @grid @grid @grid 0;
+    border-bottom: 1px dashed @font-color-base;
+  }
+}
