Report copy change

--- a/src/_includes/report-block.ejs
+++ b/src/_includes/report-block.ejs
@@ -7,7 +7,7 @@
     >
   </div>
   <p>
-    This report is about the ways that
+    This report, commissioned by Grantmakers in the Arts, is about the ways that
     <strong
       >arts and culture grantmakers can engage in systems-change work</strong
     >. The cultural sector is actively seeking alternatives to business-as-usual
