Change background color

--- a/src/styles/variables/color.less
+++ b/src/styles/variables/color.less
@@ -1,6 +1,7 @@
 @font-color-base: #212121;
-@background-color-base: #f1f1f1;
+@background-color-base: #eee8f6;
 @background-color-lighter: #ffffff;
+@background-color-gray: #f1f1f1;
 
 @accent-color-red: #eb5350;
 @accent-color-teal: #00b5a4;
