Add dandelion imagery to script

--- a/src/sections/script.ejs
+++ b/src/sections/script.ejs
@@ -5,7 +5,7 @@ position: 2
 ---
 
 <div class="section-script">
-  <div class="two-up">
+  <div class="two-up imagery-dandelion-0">
     <p>No one knows what arts and culture will look like after the pandemic</p>
     <div>
       <p>Sixty-three percent of creatives have become fully unemployed.</p>
@@ -40,7 +40,7 @@ position: 2
     </div>
   </div>
 
-  <div class="two-up">
+  <div class="two-up right imagery-dandelion-1">
     <p>
       All around the country, the people who have been most harmed by our
       current systems are practicing self-determination and community wealth
@@ -122,7 +122,7 @@ position: 2
     of shared livelihoods rooted in cultural traditions.
   </p>
 
-  <div class="two-up">
+  <div class="two-up imagery-dandelion-2">
     <p>Why should culture and economic innovation go together?</p>
     <div>
       <p>Because…</p>
@@ -151,7 +151,7 @@ position: 2
     </div>
   </div>
 
-  <div class="two-up">
+  <div class="two-up right imagery-dandelion-3">
     <div>
       <p>
         What do a <strong>mutual aid networks</strong>,<br />
@@ -168,7 +168,7 @@ position: 2
     </p>
   </div>
 
-  <div class="two-up">
+  <div class="two-up imagery-dandelion-4">
     <p>
       When these hyper-local initiatives get together, they have enormous power.
     </p>
@@ -187,7 +187,7 @@ position: 2
     </div>
   </div>
 
-  <div class="two-up">
+  <div class="two-up right imagery-dandelion-5">
     <p>
       To support this work, you can: <strong>educate yourself</strong>,
       <strong>join existing organizing work</strong>, and
