--- a/src/styles/sections/script.less
+++ b/src/styles/sections/script.less
@@ -32,47 +32,127 @@ html {
     font-size: @font-size-sm;
   }
 
+  @two-up-break: 850px;
+
   // A "two-up" expects to have two children. A p will render big text, a div with ps in it will be paragraph text.
   .two-up {
-    scroll-snap-align: start;
     padding: (@grid * 2) 0;
     box-sizing: border-box;
-    width: 100%;
+    margin-right: 50%;
+    margin-bottom: (@grid * 10);
     position: relative;
 
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-
-    &.flip {
-      flex-direction: row-reverse;
-    }
-
-    & > * {
-      flex-basis: calc(50% - @grid);
-      flex-shrink: 0;
+    &.right {
+      margin-right: 0;
+      margin-left: 50%;
     }
 
     & > p {
-      align-content: center;
-
-      box-sizing: border-box;
-
       .bigText();
     }
   }
 
   .one-up {
     .bigText();
-    scroll-snap-align: center;
+    margin: (@grid * 5) 0;
+  }
+
+  // Images
+
+  .imagery(@image) {
+    @url: '/assets/images/@{image}';
+    @top-bottom-pad: 20%;
+
+    &.two-up {
+      &::before {
+        content: '';
+        position: absolute;
+
+        left: 100%;
+        width: 100%;
+        height: 100% - @top-bottom-pad;
+        margin-top: (@top-bottom-pad / 4);
+
+        background-image: url(@url);
+        background-size: contain;
+        background-position: center center;
+        background-repeat: no-repeat;
+      }
+
+      &.right::before {
+        left: initial;
+        right: 100%;
+      }
+
+      @media (max-width: @two-up-break) {
+        &::before {
+          // Remove
+          content: none;
+        }
+
+        // Replace an ::after that displays as a block
+        &::after {
+          content: '';
+          display: block;
+
+          width: 100%;
+          height: (@grid * 20);
+          margin-top: (@grid * 4);
+
+          background-image: url(@url);
+          background-size: contain;
+          background-repeat: no-repeat;
+          background-position: center;
+        }
+      }
+    }
+  }
+
+  .imagery-dandelion-0 {
+    .imagery('drawings/dandelions_Page_1 1 (Traced).svg');
+  }
+
+  .imagery-dandelion-1 {
+    .imagery('drawings/dandelions_Page_1 1 (Traced)-5.svg');
+  }
+
+  .imagery-dandelion-2 {
+    .imagery('drawings/dandelions_Page_2 1 (Traced)-3.svg');
+  }
+
+  .imagery-dandelion-3 {
+    .imagery('drawings/dandelions_Page_2 1 (Traced)-4.svg');
+  }
+
+  .imagery-dandelion-4 {
+    .imagery('drawings/Vector-1.svg');
+  }
+
+  .imagery-dandelion-5 {
+    .imagery('drawings/paper-and-sketches_Page_6 1 (Traced).svg');
+  }
+
+  // End graphic
+  &::after {
+    content: '';
+    display: block;
+
+    width: 100%;
+    height: (@grid * 10);
+    margin: (@grid * 4) 0;
+
+    background-image: url('/assets/images/drawings/paper-and-sketches_Page_6 1 (Traced)-6.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
   // Two-up starts to look less than awesome at this point
-  @media (max-width: 850px) {
-    .two-up {
-      display: block;
-      min-height: initial;
+  @media (max-width: @two-up-break) {
+    .two-up,
+    .two-up.right,
+    .one-up {
+      margin: (@grid * 2) 0;
     }
   }
 }
